--- a/Pytorch_Tensor.ipynb
+++ b/Pytorch_Tensor.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN4106Xp/le0tJ5gunnifP4",
+      "authorship_tag": "ABX9TyOH54oM4A8G5wQpfxh+bVU5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,7 +70,7 @@
         },
         "outputId": "081a8aab-a028-45f0-cb0f-37487af389ff"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +95,7 @@
         },
         "outputId": "390ea7e7-652e-48e5-f824-8a4bd0d3618b"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -122,7 +122,7 @@
         },
         "outputId": "6097cff4-72a2-4d2a-fac4-17429129112a"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +161,7 @@
         },
         "outputId": "e36ce8da-5159-4f07-b0de-bf00c1b6b59e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -188,7 +188,7 @@
         },
         "outputId": "be8919d2-fe35-4fab-f21d-76762fcecd49"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -213,7 +213,7 @@
         },
         "outputId": "b1c5be15-87de-426e-8f9f-e27e630f9212"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -237,7 +237,7 @@
         },
         "outputId": "732bf4c8-296d-4fce-ac77-7a5a2f7ce4e3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -275,7 +275,7 @@
         },
         "outputId": "e5ac9690-f6f6-4460-cac7-bdcb2983df9c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -301,7 +301,7 @@
         },
         "outputId": "e200ee18-afd6-4bc1-b262-208809236d86"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -338,7 +338,7 @@
         },
         "outputId": "63a43529-1bfb-4fd7-81a6-7fde167cc2e1"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,7 +369,7 @@
         },
         "outputId": "3ebdd01f-1dec-4aa3-e9da-7309a5d91d43"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -407,7 +407,7 @@
         },
         "outputId": "cc8ef2bb-a302-4bf2-ab5f-073c7048ff52"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,7 +431,7 @@
         },
         "outputId": "11571305-d838-4405-f5af-b8ca5382c4b5"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -455,7 +455,7 @@
         },
         "outputId": "1dc7c390-34df-46de-e776-174e607a835d"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,7 +478,7 @@
         },
         "outputId": "c27dead2-43e3-4679-c397-b80d27b4bde6"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -501,7 +501,7 @@
         },
         "outputId": "68277a99-add2-4153-e54b-aa19a83d5145"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -524,7 +524,7 @@
         },
         "outputId": "fd73834b-6240-4a2d-ffb6-f370f7925eb4"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -557,7 +557,7 @@
         },
         "outputId": "845ef19d-bd37-4fb0-e5f1-a1f74c30a2d9"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -584,7 +584,7 @@
         },
         "outputId": "f678e5aa-9c75-447e-8ce5-cc55bfcd2e09"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -610,24 +610,24 @@
     {
       "cell_type": "code",
       "source": [
-        "t = torch.FloatTensor([[1, 2], [3, 4]])\n",
+        "t = torch.FloatTensor([[1, 2, 4],[2, 3, 1]])\n",
         "print(t)"
       ],
       "metadata": {
-        "id": "4GlrKQKLWlZ4",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1a2abb9a-c969-4e4d-c047-da14efb77614"
+        "id": "x6Wo2nR1xMDH",
+        "outputId": "63686a2c-255b-41d3-efa8-806ea56689f3"
       },
-      "execution_count": 21,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "tensor([[1., 2.],\n",
-            "        [3., 4.]])\n"
+            "tensor([[1., 2., 4.],\n",
+            "        [2., 3., 1.]])\n"
           ]
         }
       ]
@@ -642,9 +642,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7d149ba0-57b8-4e78-a6fc-b0d0f1262c9d"
+        "outputId": "0aedc0fc-74dc-4a9d-dd40-976208194985"
       },
-      "execution_count": 22,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -658,7 +658,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "max에 dim 인자를 주면 armax도 함께 리턴 \\\n",
+        "max에 dim 인자를 주면 argmax도 함께 리턴 \\\n",
         "(해당 dim 차원 방향에 대하여, 몇번째 index에 해당하는지에 대한 정보 담음)"
       ],
       "metadata": {
@@ -671,21 +671,21 @@
         "print(t.max(dim=0)) # Returns two values: max and argmax"
       ],
       "metadata": {
-        "id": "-PePj4mrWpS3",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "28581df2-f9f9-49a3-e409-bc9cfbb6e721"
+        "id": "rkBcu0TnxPxO",
+        "outputId": "4b8409f6-5fc9-4251-b0de-90326e4a0765"
       },
-      "execution_count": 23,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "torch.return_types.max(\n",
-            "values=tensor([3., 4.]),\n",
-            "indices=tensor([1, 1]))\n"
+            "values=tensor([2., 3., 4.]),\n",
+            "indices=tensor([1, 1, 0]))\n"
           ]
         }
       ]
@@ -701,16 +701,16 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "83590357-92ab-4cb4-9200-13b3d30c72e3"
+        "outputId": "41a230ef-bf8e-4841-88ae-087195b2dee5"
       },
-      "execution_count": 24,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Max:  tensor([3., 4.])\n",
-            "Argmax:  tensor([1, 1])\n"
+            "Max:  tensor([2., 3., 4.])\n",
+            "Argmax:  tensor([1, 1, 0])\n"
           ]
         }
       ]
@@ -732,7 +732,7 @@
       "metadata": {
         "id": "7WcqoRQideKJ"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -752,7 +752,7 @@
         },
         "outputId": "4d410a2e-9c21-4c45-fbc3-eddc17d649b7"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -782,7 +782,7 @@
         },
         "outputId": "664813e9-25f9-4283-87cc-8e1761df1e87"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -806,7 +806,7 @@
         },
         "outputId": "480effdc-6e9e-423c-ed9e-8ccf4d9ead2d"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -834,7 +834,7 @@
         },
         "outputId": "db39bbc3-d9b8-41e0-d35b-683b97b70f85"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -875,7 +875,7 @@
         },
         "outputId": "f0384590-5406-4142-c877-fcf853ea287c"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -902,7 +902,7 @@
         },
         "outputId": "42221519-96fc-4a0f-d01d-e6d2826fcbfe"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -936,7 +936,7 @@
         },
         "outputId": "1b58f1c0-e5e6-4cf7-a72f-445ca275b531"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -960,7 +960,7 @@
         },
         "outputId": "89e01c8a-d053-45e7-f932-dc33a3e2e994"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -985,7 +985,7 @@
         },
         "outputId": "99712eb7-8705-47ff-d98e-a2b3297b9b72"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1012,7 +1012,7 @@
         },
         "outputId": "a33c6d60-5f20-4c4d-f9ef-6098ea5442b4"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1039,7 +1039,7 @@
         },
         "outputId": "04b857fb-40d6-492b-e702-92d58d355152"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1082,7 +1082,7 @@
         },
         "outputId": "b492e60b-589c-4cfa-8238-7f90304dccd3"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1105,7 +1105,7 @@
         },
         "outputId": "2509fd57-00cf-4aad-cc1d-6e799689dd8c"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1129,7 +1129,7 @@
         },
         "outputId": "3e94ee99-9760-401b-a796-2e56c729a84d"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1153,7 +1153,7 @@
         },
         "outputId": "15417258-6398-4c3f-c206-3d6d28d661ab"
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1189,7 +1189,7 @@
         },
         "outputId": "2cb855a1-9462-4717-9282-ab260d32aace"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1215,7 +1215,7 @@
         },
         "outputId": "c0c5a753-5458-4ee0-d79e-4e8b4cec050a"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1241,7 +1241,7 @@
         },
         "outputId": "86412b06-cd67-4130-a760-a03a4e4efef1"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1279,7 +1279,7 @@
         },
         "outputId": "e77b6262-089d-448d-c2fb-5cd2982d330b"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1304,7 +1304,7 @@
         },
         "outputId": "742a8e5a-4709-4d79-fb14-593a716c9e41"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1329,7 +1329,7 @@
         },
         "outputId": "f812b3c7-411f-4688-c87b-598ac7ef1552"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1363,7 +1363,7 @@
         },
         "outputId": "e57d5296-addc-4ee4-b111-0fbf22939304"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1387,7 +1387,7 @@
         },
         "outputId": "70fa7651-3f3d-495e-ecae-950612240850"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1411,7 +1411,7 @@
         },
         "outputId": "1fa9c356-6895-45bb-b724-7576df004d48"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1440,7 +1440,7 @@
       "metadata": {
         "id": "50VqHNkBiih3"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1456,7 +1456,7 @@
         },
         "outputId": "9c03c8af-6465-41b3-8b98-c98c29f0836a"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1483,7 +1483,7 @@
         },
         "outputId": "4f75eb2b-3141-4e01-e0ce-76750ed9b394"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
