--- a/Model.ipynb
+++ b/Model.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1ig3KDmVowFv_6bZaaOKkkdmPL_INHCrW",
-      "authorship_tag": "ABX9TyMMmJn+r7CuZBijwDiHVjya",
+      "authorship_tag": "ABX9TyMDPGFI/Jr+95kUllcQ6ENb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,9 +46,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tmtvQJEply3g",
-        "outputId": "b82fa6fa-21af-495a-c1bb-7a0667d66352"
+        "outputId": "bec9913f-81e5-4252-ed39-046210181edd"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,9 +69,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5Hyf3DpDmlzG",
-        "outputId": "b4696d6c-4bc5-4262-cda8-9001b3120612"
+        "outputId": "86561232-804c-4e83-e266-f183945dd35b"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -103,7 +103,7 @@
       "metadata": {
         "id": "sHeBXJzemuQl"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -362,7 +362,7 @@
         "\n",
         "  def __getitem__(self, index):\n",
         "    x=torch.FloatTensor([self.x[index]**2, self.x[index]])\n",
-        "    y=torch.FloatTensor([y[index]])\n",
+        "    y=torch.FloatTensor([self.y[index]])\n",
         "    return x,y\n",
         "\n",
         "  def __len__(self):\n",
@@ -371,7 +371,7 @@
       "metadata": {
         "id": "JdrEZavbuDCY"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -407,7 +407,7 @@
       "metadata": {
         "id": "6fOH3nFVyuFD"
       },
-      "execution_count": 10,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -429,7 +429,7 @@
       "metadata": {
         "id": "TgKlTYLXxz3N"
       },
-      "execution_count": 8,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -452,17 +452,135 @@
       "metadata": {
         "id": "E4HDltqq44Xa"
       },
-      "execution_count": 12,
+      "execution_count": 15,
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "### 학습"
+      ],
       "metadata": {
-        "id": "P-rFGLy25rJw"
+        "id": "tSNqHSWc2G3o"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for epoch in range(10000):\n",
+        "  cost=0.0\n",
+        "\n",
+        "  for x, y in train_dataloader:\n",
+        "    x=x.to(device)\n",
+        "    y=y.to(device)\n",
+        "\n",
+        "    output=model(x)\n",
+        "    loss=criterion(output,y)\n",
+        "\n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    cost+=loss\n",
+        "\n",
+        "  cost=cost/len(train_dataloader)\n",
+        "\n",
+        "  if (epoch+1)%1000==0:\n",
+        "    print(f\"Epoch : {epoch+1:4d}, Model : {list(model.parameters())}, Cost : {cost:.3f}\")\n"
+      ],
+      "metadata": {
+        "id": "P-rFGLy25rJw",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "db1baa20-1e4c-4832-d7c0-c68ec96e0e7f"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch : 1000, Model : [Parameter containing:\n",
+            "tensor([[ 3.1025, -1.7032]], requires_grad=True), Parameter containing:\n",
+            "tensor([0.3361], requires_grad=True)], Cost : 0.087\n",
+            "Epoch : 2000, Model : [Parameter containing:\n",
+            "tensor([[ 3.1022, -1.7031]], requires_grad=True), Parameter containing:\n",
+            "tensor([0.3495], requires_grad=True)], Cost : 0.081\n",
+            "Epoch : 3000, Model : [Parameter containing:\n",
+            "tensor([[ 3.1019, -1.7031]], requires_grad=True), Parameter containing:\n",
+            "tensor([0.3619], requires_grad=True)], Cost : 0.085\n",
+            "Epoch : 4000, Model : [Parameter containing:\n",
+            "tensor([[ 3.1020, -1.7034]], requires_grad=True), Parameter containing:\n",
+            "tensor([0.3732], requires_grad=True)], Cost : 0.074\n",
+            "Epoch : 5000, Model : [Parameter containing:\n",
+            "tensor([[ 3.1022, -1.7030]], requires_grad=True), Parameter containing:\n",
+            "tensor([0.3834], requires_grad=True)], Cost : 0.083\n",
+            "Epoch : 6000, Model : [Parameter containing:\n",
+            "tensor([[ 3.1018, -1.7033]], requires_grad=True), Parameter containing:\n",
+            "tensor([0.3929], requires_grad=True)], Cost : 0.079\n",
+            "Epoch : 7000, Model : [Parameter containing:\n",
+            "tensor([[ 3.1012, -1.7033]], requires_grad=True), Parameter containing:\n",
+            "tensor([0.4015], requires_grad=True)], Cost : 0.082\n",
+            "Epoch : 8000, Model : [Parameter containing:\n",
+            "tensor([[ 3.1013, -1.7030]], requires_grad=True), Parameter containing:\n",
+            "tensor([0.4095], requires_grad=True)], Cost : 0.082\n",
+            "Epoch : 9000, Model : [Parameter containing:\n",
+            "tensor([[ 3.1015, -1.7032]], requires_grad=True), Parameter containing:\n",
+            "tensor([0.4167], requires_grad=True)], Cost : 0.082\n",
+            "Epoch : 10000, Model : [Parameter containing:\n",
+            "tensor([[ 3.1012, -1.7035]], requires_grad=True), Parameter containing:\n",
+            "tensor([0.4233], requires_grad=True)], Cost : 0.078\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 모델 평가"
+      ],
+      "metadata": {
+        "id": "NnaVWfmL6bHo"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "이 모델은 실제로 y=3.1x**2 -1.7x + random(0.01,0.99)로 구성되어 있음."
+      ],
+      "metadata": {
+        "id": "BxDmYyKO8dLR"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with torch.no_grad():\n",
+        "  model.eval() # 평가(Inference)모드 => 다시 학습을 진행하려면 model.train()을 호출해야한다.\n",
+        "  test_inputs=torch.FloatTensor([[1**2,1],[5**2,5],[11**2,11]]).to(device)\n",
+        "  outputs=model(test_inputs)\n",
+        "  print(outputs)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Cix0uc-Q6B-U",
+        "outputId": "eae5037e-3e3a-4002-9b1c-d90167aaebb2"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensor([[  1.8210],\n",
+            "        [ 69.4368],\n",
+            "        [356.9348]])\n"
+          ]
+        }
+      ]
     }
   ]
 }
