--- a/train_valid_test_split.ipynb
+++ b/train_valid_test_split.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1667KRDHKwg-U-opAR50lDpBglIUPfUCQ",
-      "authorship_tag": "ABX9TyMfMAjcQIy7DYAQWUaAUHYV",
+      "authorship_tag": "ABX9TyPIz3JHt90heAYwXQuLG7Eg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,7 +44,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a6our1kY4oh8",
-        "outputId": "e05012ce-3fba-4961-fc11-3c020c6373a8"
+        "outputId": "3b5a949b-6c70-4b8d-a903-dacfb734a956"
       },
       "outputs": [
         {
@@ -115,7 +115,7 @@
         "    self.length=len(df)\n",
         "\n",
         "  def __getitem__(self,index):\n",
-        "    x=torch.FloatTensor([self.x[index]*2,self.x[index]])\n",
+        "    x=torch.FloatTensor([self.x[index]**2,self.x[index]])\n",
         "    y=torch.FloatTensor([self.y[index]])\n",
         "    return x,y\n",
         "\n",
@@ -125,7 +125,7 @@
       "metadata": {
         "id": "WWKz35Zf5sld"
       },
-      "execution_count": 4,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -152,7 +152,7 @@
       "metadata": {
         "id": "Khm7NU_l4ez-"
       },
-      "execution_count": 8,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -184,9 +184,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IP5A2Taj5WeO",
-        "outputId": "539da16f-f53c-4444-804a-66e4dce84ceb"
+        "outputId": "53c67f58-3b64-4f30-8a8e-724273df07f0"
       },
-      "execution_count": 6,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -198,6 +198,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### dataloader를 이용한 데이터 활용 방식 설정"
+      ],
+      "metadata": {
+        "id": "RjmArkqhYdIG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dataloader = DataLoader(train_dataset,batch_size=16, shuffle=True,drop_last=True)\n",
+        "validation_dataloader = DataLoader(validation_dataset,batch_size=4,shuffle=True,drop_last=True)\n",
+        "test_dataloader= DataLoader(test_dataset, batch_size=1, shuffle=True,drop_last=True)"
+      ],
+      "metadata": {
+        "id": "cNGb2dqTYvRq"
+      },
+      "execution_count": 16,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -219,7 +241,7 @@
       "metadata": {
         "id": "tfh3_80A6W4S"
       },
-      "execution_count": 10,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -233,9 +255,142 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for epoch in range(10000):\n",
+        "    cost = 0.0\n",
+        "\n",
+        "    for x, y in train_dataloader:\n",
+        "        x = x.to(device)\n",
+        "        y = y.to(device)\n",
+        "\n",
+        "        output = model(x)\n",
+        "        loss = criterion(output, y)\n",
+        "\n",
+        "        optimizer.zero_grad()\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "\n",
+        "        cost += loss\n",
+        "\n",
+        "    cost = cost / len(train_dataloader)"
+      ],
       "metadata": {
         "id": "OIxZdE3PTBxx"
+      },
+      "execution_count": 18,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 검증"
+      ],
+      "metadata": {
+        "id": "sNpL2_-pai8x"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with torch.no_grad():\n",
+        "    model.eval()\n",
+        "    for x, y in validation_dataloader:\n",
+        "        x = x.to(device)\n",
+        "        y = y.to(device)\n",
+        "        \n",
+        "        outputs = model(x)\n",
+        "        print(f\"X : {x}\")\n",
+        "        print(f\"Y : {y}\")\n",
+        "        print(f\"Outputs : {outputs}\")\n",
+        "        print(\"--------------------\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K9ro1A5jammL",
+        "outputId": "4cfd75a7-88e6-4437-c511-fe98eb137ed5"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "X : tensor([[24.0100, -4.9000],\n",
+            "        [ 2.8900, -1.7000],\n",
+            "        [44.8900,  6.7000],\n",
+            "        [90.2500,  9.5000]])\n",
+            "Y : tensor([[ 83.2800],\n",
+            "        [ 12.7900],\n",
+            "        [127.8900],\n",
+            "        [263.8000]])\n",
+            "Outputs : tensor([[ 83.2802],\n",
+            "        [ 12.3524],\n",
+            "        [128.2459],\n",
+            "        [264.0979]])\n",
+            "--------------------\n",
+            "X : tensor([[ 7.2900,  2.7000],\n",
+            "        [46.2400, -6.8000],\n",
+            "        [ 7.8400, -2.8000],\n",
+            "        [62.4100,  7.9000]])\n",
+            "Y : tensor([[ 18.2600],\n",
+            "        [155.4300],\n",
+            "        [ 29.2000],\n",
+            "        [180.9000]])\n",
+            "Outputs : tensor([[ 18.4958],\n",
+            "        [155.4341],\n",
+            "        [ 29.5725],\n",
+            "        [180.5159]])\n",
+            "--------------------\n",
+            "X : tensor([[ 7.8400,  2.8000],\n",
+            "        [16.8100, -4.1000],\n",
+            "        [ 4.4100,  2.1000],\n",
+            "        [30.2500,  5.5000]])\n",
+            "Y : tensor([[20.3700],\n",
+            "        [59.1100],\n",
+            "        [10.4700],\n",
+            "        [85.2600]])\n",
+            "Outputs : tensor([[20.0305],\n",
+            "        [59.5960],\n",
+            "        [10.5897],\n",
+            "        [84.9044]])\n",
+            "--------------------\n",
+            "X : tensor([[40.9600,  6.4000],\n",
+            "        [16.0000,  4.0000],\n",
+            "        [ 1.6900,  1.3000],\n",
+            "        [47.6100,  6.9000]])\n",
+            "Y : tensor([[116.1800],\n",
+            "        [ 43.6400],\n",
+            "        [  3.3000],\n",
+            "        [136.7200]])\n",
+            "Outputs : tensor([[116.5735],\n",
+            "        [ 43.2831],\n",
+            "        [  3.5205],\n",
+            "        [136.3375]])\n",
+            "--------------------\n",
+            "X : tensor([[37.2100, -6.1000],\n",
+            "        [23.0400, -4.8000],\n",
+            "        [72.2500, -8.5000],\n",
+            "        [ 1.0000,  1.0000]])\n",
+            "Y : tensor([[126.4000],\n",
+            "        [ 80.1700],\n",
+            "        [238.8400],\n",
+            "        [  2.0000]])\n",
+            "Outputs : tensor([[126.2470],\n",
+            "        [ 80.1027],\n",
+            "        [238.9658],\n",
+            "        [  1.8925]])\n",
+            "--------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "VxqTMERfcLwm"
       },
       "execution_count": null,
       "outputs": []
