--- a/Binary_Classification.ipynb
+++ b/Binary_Classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1fgjzv7XM8WmmuiIwMwL0u7clck7qz4hj",
-      "authorship_tag": "ABX9TyPX2YIOYYitigv0iK7N0OKc",
+      "authorship_tag": "ABX9TyPQcVPppLVrDM+CvonV9MWQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,18 +35,50 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 345
         },
         "id": "evdYj7qyHuhU",
-        "outputId": "60bffdae-c820-40dc-c007-5db49882ce1a"
+        "outputId": "d1b1f62d-d83d-4142-fd55-4c5f96c3e015"
       },
       "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-d5df0069828e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdrive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdrive\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/drive'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/google/colab/drive.py\u001b[0m in \u001b[0;36mmount\u001b[0;34m(mountpoint, force_remount, timeout_ms, readonly)\u001b[0m\n\u001b[1;32m     98\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmountpoint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mforce_remount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout_ms\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m120000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreadonly\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m   \u001b[0;34m\"\"\"Mount your Google Drive at the specified mountpoint path.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 100\u001b[0;31m   return _mount(\n\u001b[0m\u001b[1;32m    101\u001b[0m       \u001b[0mmountpoint\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m       \u001b[0mforce_remount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mforce_remount\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/google/colab/drive.py\u001b[0m in \u001b[0;36m_mount\u001b[0;34m(mountpoint, force_remount, timeout_ms, ephemeral, readonly)\u001b[0m\n\u001b[1;32m    121\u001b[0m       'TBE_EPHEM_CREDS_ADDR'] if ephemeral else _os.environ['TBE_CREDS_ADDR']\n\u001b[1;32m    122\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mephemeral\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 123\u001b[0;31m     _message.blocking_request(\n\u001b[0m\u001b[1;32m    124\u001b[0m         'request_auth', request={'authType': 'dfs_ephemeral'}, timeout_sec=None)\n\u001b[1;32m    125\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/google/colab/_message.py\u001b[0m in \u001b[0;36mblocking_request\u001b[0;34m(request_type, request, timeout_sec, parent)\u001b[0m\n\u001b[1;32m    169\u001b[0m   request_id = send_request(\n\u001b[1;32m    170\u001b[0m       request_type, request, parent=parent, expect_reply=True)\n\u001b[0;32m--> 171\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mread_reply_from_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrequest_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout_sec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/google/colab/_message.py\u001b[0m in \u001b[0;36mread_reply_from_input\u001b[0;34m(message_id, timeout_sec)\u001b[0m\n\u001b[1;32m     95\u001b[0m     \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_read_next_input_message\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0m_NOT_READY\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreply\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 97\u001b[0;31m       \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.025\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     98\u001b[0m       \u001b[0;32mcontinue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     99\u001b[0m     if (reply.get('type') == 'colab_reply' and\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cd drive/MyDrive/pytorch"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a6onBnUInoHc",
+        "outputId": "446fd0d7-eb59-4607-dd10-dae0719254d8"
+      },
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "/content/drive/MyDrive/pytorch\n"
           ]
         }
       ]
@@ -72,7 +104,7 @@
       "metadata": {
         "id": "lNxo7mqXaGKD"
       },
-      "execution_count": 2,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -96,7 +128,7 @@
         "    self.y=df.iloc[:,3].values\n",
         "    self.length=len(df)\n",
         "\n",
-        "  def __getitm__(self,index):\n",
+        "  def __getitem__(self,index):\n",
         "    x=torch.FloatTensor([self.x1[index],self.x2[index],self.x3[index]])\n",
         "    y=torch.FloatTensor([self.y[index]])\n",
         "    return x,y\n",
@@ -107,7 +139,7 @@
       "metadata": {
         "id": "JwI5nIiGaU60"
       },
-      "execution_count": 3,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -137,7 +169,7 @@
       "metadata": {
         "id": "zghhBV83lh4e"
       },
-      "execution_count": 6,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -158,7 +190,7 @@
       "metadata": {
         "id": "hUhlQNbSgJc4"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -182,7 +214,7 @@
       "metadata": {
         "id": "T4fFYEUughz2"
       },
-      "execution_count": 7,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -209,13 +241,133 @@
         "for epoch in range(10000):\n",
         "  cost=0.0\n",
         "\n",
-        "  "
+        "  for x,y in train_dataloader:\n",
+        "    \n",
+        "    x=x.to(device)\n",
+        "    y=y.to(device)\n",
+        "\n",
+        "    output = model(x)\n",
+        "\n",
+        "    loss = criterion(output,y)\n",
+        "\n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    cost+=loss\n",
+        "\n",
+        "  cost = cost/len(train_dataloader)\n",
+        "\n",
+        "  if (epoch+1)%1000 == 0 :\n",
+        "    print(f\"Epoch : {epoch+1:4d}, Model : {list(model.parameters())}, Cost: {cost:.3f}\")"
       ],
       "metadata": {
-        "id": "3cjMCUk_l0Gu"
+        "id": "3cjMCUk_l0Gu",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e70d5a12-a1b9-4614-dea8-943c324cab97"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-15-881aa88e421c>:12: DeprecationWarning: In future, it will be an error for 'np.bool_' scalars to be interpreted as an index\n",
+            "  y=torch.FloatTensor([self.y[index]])\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch : 1000, Model : [Parameter containing:\n",
+            "tensor([[0.0052, 0.0023, 0.0043]], requires_grad=True), Parameter containing:\n",
+            "tensor([-0.2935], requires_grad=True)], Cost: 0.639\n",
+            "Epoch : 2000, Model : [Parameter containing:\n",
+            "tensor([[0.0057, 0.0027, 0.0048]], requires_grad=True), Parameter containing:\n",
+            "tensor([-0.3643], requires_grad=True)], Cost: 0.630\n",
+            "Epoch : 3000, Model : [Parameter containing:\n",
+            "tensor([[0.0060, 0.0028, 0.0053]], requires_grad=True), Parameter containing:\n",
+            "tensor([-0.4342], requires_grad=True)], Cost: 0.622\n",
+            "Epoch : 4000, Model : [Parameter containing:\n",
+            "tensor([[0.0062, 0.0039, 0.0055]], requires_grad=True), Parameter containing:\n",
+            "tensor([-0.5031], requires_grad=True)], Cost: 0.618\n",
+            "Epoch : 5000, Model : [Parameter containing:\n",
+            "tensor([[0.0064, 0.0038, 0.0057]], requires_grad=True), Parameter containing:\n",
+            "tensor([-0.5710], requires_grad=True)], Cost: 0.610\n",
+            "Epoch : 6000, Model : [Parameter containing:\n",
+            "tensor([[0.0076, 0.0043, 0.0061]], requires_grad=True), Parameter containing:\n",
+            "tensor([-0.6379], requires_grad=True)], Cost: 0.603\n",
+            "Epoch : 7000, Model : [Parameter containing:\n",
+            "tensor([[0.0074, 0.0049, 0.0070]], requires_grad=True), Parameter containing:\n",
+            "tensor([-0.7040], requires_grad=True)], Cost: 0.592\n",
+            "Epoch : 8000, Model : [Parameter containing:\n",
+            "tensor([[0.0078, 0.0056, 0.0069]], requires_grad=True), Parameter containing:\n",
+            "tensor([-0.7691], requires_grad=True)], Cost: 0.590\n",
+            "Epoch : 9000, Model : [Parameter containing:\n",
+            "tensor([[0.0082, 0.0055, 0.0071]], requires_grad=True), Parameter containing:\n",
+            "tensor([-0.8333], requires_grad=True)], Cost: 0.587\n",
+            "Epoch : 10000, Model : [Parameter containing:\n",
+            "tensor([[0.0082, 0.0062, 0.0076]], requires_grad=True), Parameter containing:\n",
+            "tensor([-0.8967], requires_grad=True)], Cost: 0.582\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### TEST"
+      ],
+      "metadata": {
+        "id": "Z4Lb6koLs1ZO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "with torch.no_grad():\n",
+        "  model.eval()\n",
+        "\n",
+        "  input= torch.FloatTensor(\n",
+        "      [[89, 92, 75], [75, 64, 50], [38, 58, 63], [33, 42, 39], [23, 15, 32]]\n",
+        "  ).to(device)\n",
+        "\n",
+        "  outputs=model(input)\n",
+        "\n",
+        "  print(\"----------\")\n",
+        "  print(outputs)\n",
+        "  print(outputs>= torch.FloatTensor([0.5]).to(device))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xLsxMfS7rUre",
+        "outputId": "d2fd1e56-ca4d-4758-b521-1d61d0b95dde"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "----------\n",
+            "tensor([[0.7252],\n",
+            "        [0.6209],\n",
+            "        [0.5624],\n",
+            "        [0.4823],\n",
+            "        [0.4079]])\n",
+            "tensor([[ True],\n",
+            "        [ True],\n",
+            "        [ True],\n",
+            "        [False],\n",
+            "        [False]])\n"
+          ]
+        }
+      ]
     }
   ]
 }
