--- a/MultiClass_Classification.ipynb
+++ b/MultiClass_Classification.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGaskPeDLaAZwT/urABYxc",
+      "mount_file_id": "1rAk7D4MxUGqzwtw9VJpl6jpE0c1fp2t6",
+      "authorship_tag": "ABX9TyO+b87FfIah+VU34yzXtHH+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,9 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "cells": [
     {
@@ -37,21 +40,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "zTxLPu6Cum7d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "3eea8502-a4bd-42c2-8369-ab2865d7ffc2"
+        "outputId": "b1f64e46-86e4-4b91-8d95-7ebde34e7c0e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[Errno 2] No such file or directory: 'drive/MyDrive/pytorch'\n",
-            "/content\n"
+            "/content/drive/MyDrive/pytorch\n"
           ]
         }
       ],
@@ -80,7 +82,7 @@
       "metadata": {
         "id": "DG9W_YR23Cgx"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -96,34 +98,34 @@
       "cell_type": "code",
       "source": [
         "class CustomDataset(Dataset):\n",
-        "  def __init__(self,path):\n",
-        "    df=pd.read_csv(path)\n",
-        "    self.a=df.iloc[:,0].values\n",
-        "    self.b=df.iloc[:,1].values\n",
-        "    self.c=df.iloc[:.2].values\n",
-        "    self.y=df.iloc[:,3].vlaues\n",
-        "    self.y=[str_2_vec(i) for i in self.y] # list comprehension / or list(map(self.str_2_vec,self.y))\n",
-        "    self.length=len(df)\n",
+        "    def __init__(self, file_path):\n",
+        "        df = pd.read_csv(file_path)\n",
+        "        self.a = df.iloc[:, 0].values\n",
+        "        self.b = df.iloc[:, 1].values\n",
+        "        self.c = df.iloc[:, 2].values\n",
+        "        self.y = df.iloc[:, 3].values\n",
+        "        self.y = list(map(self.string_to_vector, self.y))\n",
+        "        self.length = len(df)\n",
         "\n",
+        "    def string_to_vector(self, value):\n",
+        "        data = {\"acute triangle\": 0, \"right triangle\": 1, \"obtuse triangle\": 2}\n",
+        "        return data.get(value, None)\n",
+        "        # dictionary 자료형 key를 통해 value 불러오기 2가지 방법 \n",
+        "        # 1. data[원하는 key] => data 내에 원하는 key가 없을 경우 오류\n",
+        "        # 2. data.get(원하는 키) => data 내에 원한느 key가 없을 경우 None 반환\n",
         "\n",
-        "  def str_2_vec(self,value):\n",
-        "    data={\"acute triangle\" : 0, \"right triangle\" : 1, \"obtuse triangle\" : 2}\n",
-        "    return data[vlaue]  # dictionary 자료형 key를 통해 value 불러오기 2가지 방법 \n",
-        "    # 1. data[원하는 key] => data 내에 원하는 key가 없을 경우 오류\n",
-        "    # 2. data.get(원하는 키) => data 내에 원한느 key가 없을 경우 None 반환\n",
+        "    def __getitem__(self, index):\n",
+        "        x = torch.FloatTensor(sorted([self.a[index], self.b[index], self.c[index]]))\n",
+        "        y = torch.LongTensor(self.y)[index]\n",
+        "        return x, y\n",
         "\n",
-        "  def __getitem__(self,index):\n",
-        "    x= torch.FloatTensor(sorted([self.a[index],self.b[index],self.c[index]]))\n",
-        "    y=torch.LongTensor([self.y[index]])  # => torch.LongTensor(self.y)[index]\n",
-        "    return x,y\n",
-        "\n",
-        "  def __len__(self):\n",
-        "    return self.length"
+        "    def __len__(self):\n",
+        "        return self.length"
       ],
       "metadata": {
-        "id": "fdJePNqi3fBf"
+        "id": "xBcpMflmEYRp"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,9 +139,175 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "class CustomModel(nn.Module):\n",
+        "  def __init__(self):\n",
+        "    super(CustomModel,self).__init__()\n",
+        "    self.layer=nn.Sequential(\n",
+        "        nn.Linear(3,3)\n",
+        "    )\n",
+        "\n",
+        "  def forward(self,x):\n",
+        "    x=self.layer(x)\n",
+        "    return x"
+      ],
       "metadata": {
         "id": "amx9fPGHC6b0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Data Load"
+      ],
+      "metadata": {
+        "id": "DZIrxLrlBGaL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dataset = CustomDataset('./dataset.csv')\n",
+        "train_dataloader = DataLoader(train_dataset,batch_size=128,shuffle=True,drop_last=True)"
+      ],
+      "metadata": {
+        "id": "x4nAcOh9_ArB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Compile"
+      ],
+      "metadata": {
+        "id": "lnRn6yyiHPHl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "device='cuda' if torch.cuda.is_available() else 'cpu'\n",
+        "model=CustomModel().to(device)\n",
+        "criterion=nn.CrossEntropyLoss().to(device)  #Sotmax와 One-hot Encodingㅇ르 자체적을 수행\n",
+        "optimizer=optim.SGD(model.parameters(),lr=0.001)"
+      ],
+      "metadata": {
+        "id": "IuMnOZaJDfNh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Train"
+      ],
+      "metadata": {
+        "id": "wHP7iEx6Hu0h"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for epoch in range(10000):\n",
+        "  cost=0.0\n",
+        "\n",
+        "  for x,y in train_dataloader:\n",
+        "    x= x.to(device)\n",
+        "    y= y.to(device)\n",
+        "\n",
+        "    output=model(x)\n",
+        "    loss=criterion(output,y)\n",
+        "    \n",
+        "    optimizer.zero_grad()\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "    cost+=loss\n",
+        "  \n",
+        "  cost=cost/len(train_dataloader)\n",
+        "\n",
+        "  if (epoch+1)%1000 ==0:\n",
+        "    print(f\"Epoch : {epoch+1}, Cost : {cost:.3f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 437
+        },
+        "id": "-tglQztJHuJQ",
+        "outputId": "d41d44e8-bd6a-45de-ee08-ae82235521a6"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch : 1000, Cost : 0.219\n",
+            "Epoch : 2000, Cost : 0.139\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-10-dd55221a569b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m   \u001b[0mcost\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0.0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m   \u001b[0;32mfor\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtrain_dataloader\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0mx\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/torch/utils/data/dataloader.py\u001b[0m in \u001b[0;36m__next__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    626\u001b[0m                 \u001b[0;31m# TODO(https://github.com/pytorch/pytorch/issues/76750)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    627\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_reset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# type: ignore[call-arg]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 628\u001b[0;31m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_next_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    629\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_num_yielded\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    630\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dataset_kind\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0m_DatasetKind\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mIterable\u001b[0m \u001b[0;32mand\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/torch/utils/data/dataloader.py\u001b[0m in \u001b[0;36m_next_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    669\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_next_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    670\u001b[0m         \u001b[0mindex\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_next_index\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# may raise StopIteration\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 671\u001b[0;31m         \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_dataset_fetcher\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfetch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# may raise StopIteration\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    672\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_pin_memory\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    673\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_utils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpin_memory\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpin_memory\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_pin_memory_device\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/torch/utils/data/_utils/fetch.py\u001b[0m in \u001b[0;36mfetch\u001b[0;34m(self, possibly_batched_index)\u001b[0m\n\u001b[1;32m     56\u001b[0m                 \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getitems__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpossibly_batched_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 58\u001b[0;31m                 \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpossibly_batched_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     59\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpossibly_batched_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.8/dist-packages/torch/utils/data/_utils/fetch.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m     56\u001b[0m                 \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getitems__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpossibly_batched_index\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 58\u001b[0;31m                 \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0midx\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0midx\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mpossibly_batched_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     59\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     60\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdataset\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mpossibly_batched_index\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-3-94ee39d6571f>\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, index)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mFloatTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msorted\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mLongTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Evaluation"
+      ],
+      "metadata": {
+        "id": "VI54O3bNPIWk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for torch.no_grad():\n",
+        "  model.eval()\n",
+        "  classes={\"acute triangle\": 0, \"right triangle\": 1, \"obtuse triangle\": 2}\n",
+        "  \n",
+        "  inputs = torch.FloatTensor([\n",
+        "        [9.02, 9.77, 9.96], # 0 | acute triangle\n",
+        "        [8.01, 8.08, 8.32], # 0 | acute triangle\n",
+        "        [3.55, 5.15, 6.26], # 1 | right triangle\n",
+        "        [3.32, 3.93, 5.14], # 1 | right triangle\n",
+        "        [4.39, 5.56, 9.99], # 2 | obtuse triangle\n",
+        "        [3.01, 3.08, 9.98], # 2 | obtuse triangle\n",
+        "        [5.21, 5.38, 5.39], # 0 | acute triangle\n",
+        "        [3.85, 6.23, 7.32], # 1 | right triangle\n",
+        "        [4.16, 4.98, 8.54], # 2 | obtuse triangle\n",
+        "    ]).to(device)\n",
+        "\n",
+        "    output=model(intputs)\n",
+        "\n",
+        "    print(\"---------------\")\n",
+        "    print(output)\n",
+        "    print(torch.round(F.softmax(output,dim=1),decimals=2))\n",
+        "    print(outputs.argmax(1))\n",
+        "    print(list(map(classes.get, outputs.argmax(1).tolist())))"
+      ],
+      "metadata": {
+        "id": "1HMABnelO-K6"
       },
       "execution_count": null,
       "outputs": []
